Changes since version 1.4 - Jacco Geul <jacco@geul.net>:
    - download limiting has been added from (removed in 1.3), it had to be 
      reworked the script now directs ingress to ifb virtual interface where 
      it is properly limited. Source for this work are:
      - https://gist.github.com/ole1986/d9d6be5218affd41796610a35e3b069c
      - https://wiki.archlinux.org/index.php/advanced_traffic_control
    - make upload or download limiting optional

Changes since version 1.3 - Simon Séhier <simon@sehier.fr>:
        - move from CBQ to HTB queing.
          CBQ didn't cope well on a ~100Mbps link : individual downloads
          were ceiling at 3Mbit/s. Moving to HTB allows to really use all the
          available bandwith, event with a single TCP connection, and without
          any caveats on SIP telephony or link reactivity.

Changes since version 1.2 - Jacco Geul <jacco@geul.net>:
        - added command-line interface (through options and flags) 
          that didn't seem to be working before as the options were 
          hardcoded in the script.

Changes since version 1.1 - Bert Hubert <ahu@ds9a.nl>:
        - Georg Wild <georg.wild@gmx.de> noticed that
          NOPRIOHOSTDST was never used

Changes since version 1.0 - Bert Hubert <ahu@ds9a.nl>:

        - we now prioritize ALL small packets, not just acks
        - ability to deprioritize certain source/dst host/ports