@@ -1,12 +1,32 @@
 [wondershaper]
+
 # Adapter
-#
 IFACE="eth0"
 
 # Download rate in Kbps
-#
 DSPEED="2048"
 
 # Upload rate in Kbps
-#
 USPEED="512"
+
+### Separate items by whitespace:
+
+#HIPRIODST=(IP1 IP2)
+HIPRIODST=()
+
+COMMONOPTIONS=()
+
+# low priority OUTGOING traffic - you can leave this blank if you want
+# low priority source netmasks
+NOPRIOHOSTSRC=(80);
+
+# low priority destination netmasks
+NOPRIOHOSTDST=();
+
+# low priority source ports
+NOPRIOPORTSRC=();
+
+# low priority destination ports
+NOPRIOPORTDST=();
+
+### EOF
