@@ -6,9 +6,9 @@ Wants=network.target
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-EnvironmentFile=/etc/conf.d/wondershaper.conf
-ExecStart=/usr/bin/wondershaper -a $IFACE -d $DSPEED -u $USPEED
-ExecStop=/usr/bin/wondershaper -c -a $IFACE
+EnvironmentFile=/etc/systemd/wondershaper.conf
+ExecStart=/usr/sbin/wondershaper -a $IFACE -d $DSPEED -u $USPEED
+ExecStop=/usr/sbin/wondershaper -c -a $IFACE
 
 [Install]
 WantedBy=multi-user.target
